# GSI-utils

./: CMakeLists.txt  INSTALL.md  README.md
.github/workflows/: gcc.yml  intel.yml
ci/: spack.yaml
modulefiles/: gsiutils_cheyenne.gnu.lua  gsiutils_cheyenne.intel.lua  gsiutils_common.lua  gsiutils_hera.gnu.lua  gsiutils_hera.intel.lua  gsiutils_hercules.lua  gsiutils_jet.intel.lua  gsiutils_jet.lua  gsiutils_orion.intel.lua  gsiutils_orion.lua  gsiutils_s4.intel.lua  gsiutils_s4.lua  gsiutils_wcoss2.intel.lua  gsiutils_wcoss2.lua  gsiutils_wcoss_dell_p3.lua
src/: CMakeLists.txt  README
src/Correlated_Obs/: CMakeLists.txt
src/EFSOI_Utilities/: CMakeLists.txt
src/EFSOI_Utilities/fix/: README_EFSOI_fix
src/EFSOI_Utilities/scripts/: README_EFSOI_scripts  README_fv3gfs  allstats.py  consolidate_osense.py  convdata_codes.csv  copyefsoifiles.sh  geoplot.py  osense.py  osense2nc.py  osense_old.py  plotstats.py  quickstats.py  readcycsatconsolidate.py  reduce_osense.py
src/EnKF/arw/src/enspreproc_regional.fd/: CMakeLists.txt
src/EnKF/arw/src/initialens_regional.fd/: CMakeLists.txt
src/EnKF/gfs/src/getsfcensmeanp.fd/: getsfcensmeanp.f90
src/EnKF/gfs/src/recentersigp.fd/: recentersigp.f90
src/NMC_Bkerror/sorc/: CMakeLists.txt  getcases.f90  readpairs.f90
src/netcdf_io/interp_inc.fd/: CMakeLists.txt  driver.F90  driver.f90
ush/: build.sh  detect_machine.sh  module-setup.sh
util/: CMakeLists.txt
util/EnKF/: CMakeLists.txt
